project and partner pages

--- a/projects.html
+++ b/projects.html
@@ -8,15 +8,15 @@ keywords: "civic tech, design, policy, municipal politics, technology"
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
 				<ul class="slides">
-			   	<li style="background-image: url(images/slide_1.jpg);">
+			   	<li style="background-image: url(assets/images/wrvotes-map.png);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text">
 			   				<div class="slider-text-inner">
 			   					<div class="desc">
-			   						<span>Finished Projects</span>
-			   						<h2>Our Work</h2>
-			   						<p class="fh5co-lead">Designed with <i class="icon-heart3"></i> by the fine folks at <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
+			   						<span>Projects</span>
+			   						<h2>Waterloo Region Votes</h2>
+			   						<p class="fh5co-lead">This was our first project that we completed through our bi-weekly hacknights.</p>
 			   					</div>
 			   				</div>
 			   			</div>
@@ -26,35 +26,46 @@ keywords: "civic tech, design, policy, municipal politics, technology"
 		  	</div>
 		</aside>
 
+		<div id="fh5co-intro-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 animate-box text-center">
+						<h2 class="intro-heading">About the project</h2>
+						<p>Waterloo Region Votes is a nonpartisan initiative to increase voter engagement during the October 2018 municipal election.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 		<div id="fh5co-work-section" class="fh5co-work-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 text-center animate-box">
-						<div class="work" style="background-image: url(images/img-1.jpg);">
-							<a href="#" class="view">
-								<span>View Demo</span>
+						<div class="work" style="background-image: url(assets/images/wrvotes-wardpage.png);">
+							<a href="https://waterlooregionvotes.org/" class="view">
+								<span>Visit the website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-8 text-center animate-box">
-						<div class="work" style="background-image: url(images/img-2.jpg);">
-							<a href="#" class="view">
-								<span>View Demo</span>
+						<div class="work" style="background-image: url(assets/images/wrvotes-winners.png);">
+							<a href="https://waterlooregionvotes.org/" class="view">
+								<span>Visit the website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-7 text-center animate-box">
-						<div class="work" style="background-image: url(images/img-3.jpg);">
-							<a href="#" class="view">
-								<span>View Demo</span>
+						<div class="work" style="background-image: url(assets/images/wrvotes-map.png);">
+							<a href="https://waterlooregionvotes.org/" class="view">
+								<span>Visit the website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-5 text-center animate-box">
-						<div class="work" style="background-image: url(images/img-4.jpg);">
-							<a href="#" class="view">
-								<span>View Demo</span>
+						<div class="work" style="background-image: url(assets/images/wrvotes-events.png);">
+							<a href="https://waterlooregionvotes.org/" class="view">
+								<span>Visit the website</span>
 							</a>
 						</div>
 					</div>
