--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@ keywords: "civic tech, design, policy, municipal politics, technology"
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
 				<ul class="slides">
-			   	<li style="background-image: url(assets/images/wrvotes-map.png);">
+			   	<li style="background-image: url({{site.baseurl}}/assets/images/wrvotes-map.png);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text">
@@ -16,7 +16,7 @@ keywords: "civic tech, design, policy, municipal politics, technology"
 			   					<div class="desc">
 			   						<span>Projects</span>
 			   						<h2>Waterloo Region Votes</h2>
-			   						<p class="fh5co-lead">This was our first project that we completed through our bi-weekly hacknights.</p>
+			   						<p class="fh5co-lead">Our first project was built to provide easily accessible information about the candidates in the October 2108 municipal election.</p>
 			   					</div>
 			   				</div>
 			   			</div>
@@ -31,7 +31,7 @@ keywords: "civic tech, design, policy, municipal politics, technology"
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 animate-box text-center">
 						<h2 class="intro-heading">About the project</h2>
-						<p>Waterloo Region Votes is a nonpartisan initiative to increase voter engagement during the October 2018 municipal election.</p>
+						<p>Waterloo Region Votes is a nonpartisan initiative to increase voter engagement during the October 2018 municipal election. It is now live at <a href="https://waterlooregionvotes.org/">waterlooregionvotes.org</a>.</p>
 					</div>
 				</div>
 			</div>
@@ -42,28 +42,28 @@ keywords: "civic tech, design, policy, municipal politics, technology"
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 text-center animate-box">
-						<div class="work" style="background-image: url(assets/images/wrvotes-wardpage.png);">
+						<div class="work" style="background-image: url({{site.baseurl}}/assets/images/wrvotes-wardpage.png);">
 							<a href="https://waterlooregionvotes.org/" class="view">
 								<span>Visit the website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-8 text-center animate-box">
-						<div class="work" style="background-image: url(assets/images/wrvotes-winners.png);">
+						<div class="work" style="background-image: url({{site.baseurl}}/assets/images/wrvotes-winners.png);">
 							<a href="https://waterlooregionvotes.org/" class="view">
 								<span>Visit the website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-7 text-center animate-box">
-						<div class="work" style="background-image: url(assets/images/wrvotes-map.png);">
+						<div class="work" style="background-image: url({{site.baseurl}}/assets/images/wrvotes-map.png);">
 							<a href="https://waterlooregionvotes.org/" class="view">
 								<span>Visit the website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-5 text-center animate-box">
-						<div class="work" style="background-image: url(assets/images/wrvotes-events.png);">
+						<div class="work" style="background-image: url({{site.baseurl}}/assets/images/wrvotes-events.png);">
 							<a href="https://waterlooregionvotes.org/" class="view">
 								<span>Visit the website</span>
 							</a>
