added about page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ custom_js: index.js
 			   				<div class="slider-text-inner">
 			   					<div class="desc">
 			   						<h2>Civic Tech Waterloo Region</h2>
-			   						<p>We're a community group that brings together people from different sectors and industries to actively solve issues facing our local community using technology-based solutions.</p>
+			   						<p>We're a community group that brings together people from different sectors and industries to actively solve issues facing our local community using design and technology.</p>
 			   					</div>
 			   				</div>
 			   			</div>
