Update Slack links to use custom variable

--- a/get-involved.html
+++ b/get-involved.html
@@ -31,7 +31,7 @@ keywords: "civic tech, design, policy, municipal politics, technology"
 					<div class="col-md-8 col-md-offset-2 animate-box text-center">
 						<h2 class="intro-heading">Participate</h2>
 						<p>CivicTechWR brings together people from different sectors and industries to actively solve issues facing our local community. We welcome people with all types and levels of skills. Even though "tech" is in the name, everyone is welcome and everyone has a skill or experience that is valuable. You don’t need to know anything about the local government either, even though “civic” is in the name.</p>
-						<p>If you have a project idea, announcement, or event, you’re welcome to pitch at any of our hacknights, or join our <a href="https://civictechwr.slack.com/">slack team</a> to talk to the group.</p>
+						<p>If you have a project idea, announcement, or event, you’re welcome to pitch at any of our hacknights, or join our <a href="{{ site.slack_invite }}">slack team</a> to talk to the group.</p>
 					</div>
 				</div>
 			</div>
